--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -23,19 +23,76 @@
 /* =============================================================
    FOOTER SECTION STYLES
  ============================================================ */
-.footer-section {
-    padding:25px 50px 25px 50px;
-    color:#000;
-    font-size:13px;
-      background-color: #f7f7f7;
-      text-align:right;
-       border-top:5px solid #9170E4;
+ footer{
+    color: white;
+  }
+  footer a{
+    color:#6D6D6D;
+  }
+  footer a:hover{
+    color: rgb(187, 25, 25);
+    text-decoration: none;
+  }
 
-}
+  span.iconFooter :hover{
+    color: rgb(187, 25, 25);
+  }
+  
+  .footer-bottom{
+    background: #6D6D6D;
+    padding: 2em;
+  
+  }
 
-    .footer-section a, .footer-section a:hover {
-        color:#000;
-    }
+  .footer-bottom .row{
+    text-align: center;
+  }
+
+  .footer-top{
+    background:  #66AB01;
+    color:#6D6D6D;
+    font-weight: bold;
+    ; 
+     
+  }
+
+  .footer-title { color:#ffffff; text-align: center;}
+
+  .footer-top .card
+  {
+background-color:#D2FFBC;
+  }
+
+  .footer-middle{
+     background: #3d6277;
+    padding-top: 2em;
+    color: white;
+  }
+  /**Sub Navigation**/
+  .subnavigation-container{
+    background: #3d6277;
+  }
+  .subnavigation .nav-link{
+    color: white;
+    font-weight: bold;
+  }
+  .subnavigation-container{
+    text-align: center;
+  }
+  .subnavigation-container .navbar{
+    display: inline-block;
+    margin-bottom: -6px; /* Inline-block margin offffset HACK -Gilron */
+  }
+  .col-subnav a{
+    padding: 1rem 1rem;
+    color: white;
+    font-weight: bold;
+  }
+  .col-subnav .active{
+    border-top:5px solid orange;
+   background: white;
+    color: black;
+  }
 
 /* TABLE  */
 
