--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -189,3 +189,6 @@ margin-left:5px;
 	filter : progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 );
 
 }
+
+
+/* CHECKBOX EFFECT */
