--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -208,3 +208,30 @@ margin-left:5px;
 .tooltip.bs-tooltip-top .arrow:before {
   border-right-color: #218838 !important;
 }
+
+.crono{
+  width: 95%;
+  padding:5px;
+}
+label {
+  clear: both;
+  display: block;
+}
+.crono span {
+  -webkit-border-radius: 15px;
+-moz-border-radius: 15px;
+border-radius: 15px;
+  background: #459b1a9c;
+  color: #FFF;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  width: 50%;
+  display: block;
+  float: left;
+  border-right: 1px solid #FFF;
+
+}
+#crono span:last-child {
+  border-right: 1px solid #313233;
+}
