--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -426,3 +426,55 @@ canvas{
   background-color: #e0e0e0;
   color: #333;
 }
+
+
+/* CSS SETTING CONTA LOCALE*/
+
+    /* Effetto hover per i pulsanti di comando */
+    .sc_list-group-item-action:hover {
+      background-color: #f8f9fa;
+      color: #007bff;
+      cursor: pointer;
+      
+  }
+
+  /* Stile per il testo */
+  .sc_shadow-sm {
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .sc_border-0 {
+      border: none;
+  }
+
+  .sc_bg-primary {
+      background-color: #007bff !important;
+  }
+
+  .sc_bg-secondary {
+      background-color: #6c757d !important;
+  }
+
+  .sc_text-white {
+      color: #fff !important;
+  }
+
+  .sc_text-muted {
+      color: #6c757d;
+  }
+
+  h6 {
+      font-weight: bold;
+  }
+
+  /* Wrapper principale con Flexbox per riempire la pagina */
+.sc_wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Occupa l'intera altezza della finestra */
+}
+
+/* Container principale per il contenuto */
+#page-content-wrapper {
+  flex: 1; /* Espande il contenuto per riempire lo spazio disponibile */
+}
